--- a/sample.css
+++ b/sample.css
@@ -63,3 +63,38 @@ footer{
   height:50px;
   background-color: #AAAAAA
 }
+
+@media screen and (max-width: 768px) {
+  header {
+    width:100%;
+  }
+
+  main {
+    width:100%;
+    display:block;
+  }
+
+  .main-visual-content {
+    width:90%;
+    margin:0 auto;
+    margin-bottom:20px;
+  }
+  
+  .main-visual-content:last-child {
+    margin:0 auto;
+  }
+
+  .main-item1 {
+    width:100%;
+  }
+  .main-item2 {
+    width:100%;
+  }
+  .main-item3 {
+    width:100%;
+  }
+
+  footer {
+    width:100%;
+  }
+}
